--- a/environment.yaml
+++ b/environment.yaml
@@ -29,11 +29,16 @@ dependencies:
   - wincertstore=0.2=py38_0
   - zlib=1.2.11=h62dcd97_4
   - pip:
+    - chardet==3.0.4
     - gitdb==4.0.5
     - gitpython==3.1.3
+    - idna==2.10
     - lxml==4.5.1
+    - oyaml==1.0
     - pycountry==19.8.18
+    - pyyaml==5.3.1
+    - requests==2.24.0
     - send2trash==1.5.0
     - smmap==3.0.4
+    - urllib3==1.25.11
 prefix: C:\Users\jbarton\Miniconda3\envs\COVID_ENV
-
